fix credit card icon alignment issues on checkout

--- a/css/less/media-queries.less
+++ b/css/less/media-queries.less
@@ -176,6 +176,10 @@
 	.documentation .main .content {
 		width: 680px;
 	}
+
+	#edd_checkout_form_wrap span.card-type {
+		right: 432px;
+	}
 }
 
 /* ----------------------------- *
@@ -315,6 +319,10 @@
 
 	.documentation .main .content {
 		width: 680px;
+	}
+
+	#edd_checkout_form_wrap span.card-type {
+		right: 281px;
 	}
 }
 
@@ -607,6 +615,10 @@
 
 	footer .container img {
 		right: -25px;
+	}
+
+	#edd_checkout_form_wrap span.card-type {
+		display: none;
 	}
 }
 
